test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/sub_double_from_ptr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(y)
  =
  const int(0)
  ;
  return
  (
  identifier(y)
  -
  const double(0.0)
  ==
  const double(0.0)
  )
  ;
  }
